✨ Feature: 역할 list 조회 시, 시나리오 list 추가